Fix zero state view for normal size
- Now zero state view is stretched to full screen

--- a/src/app/assets/styles/_color_variables.scss
+++ b/src/app/assets/styles/_color_variables.scss
@@ -17,3 +17,4 @@ $primary: #326DE6;
 $delicate: #AAAAAA;
 $muted: #888888;
 $hoverPrimary: #1254DF;
+$body: #eeeeee;
