--- a/src/app/frontend/chrome/chrome.scss
+++ b/src/app/frontend/chrome/chrome.scss
@@ -12,6 +12,8 @@
 // See the License for the specific language governing permissions and
 // limitations under the License.
 
+@import "../../assets/styles/color_variables";
+
 .kd-toolbar-logo {
   height: 42px;
   width: 42px;
@@ -24,7 +26,7 @@
       0px 0px 2px 2px rgba(0, 0, 0, 0.098), 0px 0px 5px 1px rgba(0, 0, 0, 0.084);
 }
 
-.kd-content, body {
-  background-color: #eeeeee;
+body {
+  background-color: $body;
   height: 100%;
 }
